# monte

./: .gitignore  .mise.toml  AGENTS.md  LICENSE  README.md  Taskfile.yml  pyproject.toml
deploy/: publish.sh
docs/: README.md  _quarto.yml  index.qmd
docs/examples/: correlated-outcomes.qmd  correlated-sampling.qmd  decision-trees.qmd  distributions.qmd  equipment-failures.qmd  mc-composition.qmd  mixtures.qmd  prospect-evaluation.qmd  sensitivity-analysis.qmd
src/drisk/: __init__.py  _style.py  arithmetic.py  random.py  summary.py
src/drisk/copulas/: __init__.py  base.py  gaussian.py  serializable.py  student_t.py
src/drisk/correlations/: __init__.py  matrix.py
src/drisk/decision/: __init__.py  base.py
src/drisk/decision/dtree/: _plotting.py  tree.py
src/drisk/distributions/: __init__.py  base.py  mixture.py  registry.py  serializable.py  types.py
src/drisk/distributions/univariate/: __init__.py  base.py  constant.py
src/drisk/models/: __init__.py  base.py  functions.py
src/drisk/sensitivity/: __init__.py  _evaluate.py  _inputs.py  one_at_a_time.py
src/monte/: __init__.py  arithmetic.py  random.py  summary.py
src/monte/copulas/: __init__.py  base.py  gaussian.py  student_t.py
src/monte/correlations/: matrix.py
src/monte/distributions/: __init__.py  base.py  mixture.py  types.py
src/monte/distributions/univariate/: __init__.py  (+2 more)
src/monte/models/: base.py
tests/: test_beta_distributions.py  test_constant_distribution.py  test_continuous_distributions.py  test_copulas.py  test_decision_trees.py  test_discrete_distributions.py  test_distribution_base.py  test_imports.py  test_mc_models.py  test_mixture_distribution.py  test_sensitivity.py  test_serialization_roundtrip.py  test_uv_continuous_domains.py
tests/test_correlations/: test_matrix.py
(+27 files in other folders)
